--- a/client/src/components/Portfolio/projects.css
+++ b/client/src/components/Portfolio/projects.css
@@ -19,7 +19,8 @@
 	padding: 20px;
 	background: white;
 	border-radius: 8px;
-	overflow: scroll;
+	overflow-y: auto;
+	max-height: 80vh;
   }
   
   @media (max-width: 600px) {
@@ -29,4 +30,4 @@
 	  font-size: 14px;
 	}
   }
-  
+   
